2007-08-21  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4814]
	* resolv/res_hconf.c: Prepare for compiling outside libc.
	* nscd/res_hconf.c: New file.
	* nscd/Makefile (nscd-modules): Add res_hconf.  Add rules to build
	the new file.
	* nscd/gethstbynm2_r.c (NEED__RES_HCONF): Define.
	* nscd/gethstbyad_r.c (NEED__RES_HCONF): Likewise.

	* nscd/hstcache.c (cache_addhst): Minimal optimization.

	[BZ #4925]
	* debug/pcprofiledump.c: Turn on internationalization by calling
	setlocale.  Patch mostly by Benno Schulenberg.

	[BZ #4936]
	* iconv/gconv.c (__gconv): If flush was successful, clear rest of
	the state.
	* iconvdata/Makefile: Add rules to build and run bug-iconv5.
	* iconvdata/bug-iconv5.c: New file.

2007-08-04  Carlos O'Donell  <carlos@systemhalted.org>

	[BZ #4896]
	* elf/elf.h: Define R_PARISC_PLABEL21L, R_PARISC_PLABEL14R,
	R_PARISC_GNU_VTENTRY, R_PARISC_GNU_VTINHERIT, R_PARISC_TLS_GD21L,
	R_PARISC_TLS_GD14R, R_PARISC_TLS_GDCALL, R_PARISC_TLS_LDM21L,
	R_PARISC_TLS_LDM14R, R_PARISC_TLS_LDMCALL, R_PARISC_TLS_LDO21L,
	R_PARISC_TLS_LDO14R, R_PARISC_TLS_DTPMOD32, R_PARISC_TLS_DTPMOD64,
	R_PARISC_TLS_DTPOFF32, R_PARISC_TLS_DTPOFF64, R_PARISC_TLS_LE21L,
	R_PARISC_TLS_LE14R, R_PARISC_TLS_IE21L, R_PARISC_TLS_IE14R,
	R_PARISC_TLS_TPREL32, R_PARISC_TLS_TPREL64.

2007-08-21  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4937]
	* elf/do-lookup.h (do_lookup_x): Minimal improvement in hash
	lookup loop.  Suggested by John Reiser.

2007-08-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/sysdep.h: Include tls.h.

2007-08-20  Ulrich Drepper  <drepper@redhat.com>

	* csu/libc-start.c: Don't handle VDSO_SETUP here.
	* sysdeps/unix/sysv/linux/init-first.c: Handle it here instead.
	* sysdeps/unix/sysv/linux/x86_64/libc-start.c: Renamed to...
	* sysdeps/unix/sysv/linux/x86_64/init-first.c: ...this.  New file.
	* sysdeps/unix/sysv/linux/powerpc/libc-start.c: Move VDSO_SETUP code
	to...
	* sysdeps/unix/sysv/linux/x86_64/init-first.c: ...here.  New file.
